--- a/style.css
+++ b/style.css
@@ -20,3 +20,15 @@ h3 {
   font-style: italic;
   color: var(--font-color);
 }
+i {
+  font-size: 40px;
+  cursor: pointer;
+  color: var(--bg-color);
+  border-radius: 50px;
+  border: 4px solid var(--font-color);
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
