--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   background-color: var(--heading-color);
   text-align: center;
 }
+.container {
+  width: 400px;
+  margin: 0 auto;
+}
 h1 {
   font-family: "Playfair Display", serif;
   color: var(--bg-color);
@@ -31,4 +35,32 @@ i {
   display: flex;
   justify-content: center;
   align-content: center;
+}
+input {
+  padding: 10px 10px;
+  margin-top: 10px;
+  border-radius: 8px;
+  border: 3px solid var(--bg-color);
+}
+::placeholder {
+  font-size: 14px;
+  color: var(--bg-color);
+  font-weight: bold;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+*:focus {
+  outline: none;
+}
+
+#item {
+  width: 60%;
+}
+#amount {
+  width: 25%;
 }
