--- a/style.css
+++ b/style.css
@@ -59,8 +59,17 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 #item {
-  width: 60%;
+  width: 40%;
 }
 #amount {
   width: 25%;
+}
+button {
+  padding: 9px 10px;
+  border-radius: 8px;
+  border: 3px solid var(--bg-color);
+  font-size: 14px;
+  font-weight: bold;
+  color: var(--bg-color);
+  cursor: pointer;
 }
