--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ input {
   margin-top: 10px;
   border-radius: 8px;
   border: 3px solid var(--bg-color);
+  font-weight: 500;
+}
+#total-salary {
+  font-weight: bold;
+  font-size: 16px;
 }
 ::placeholder {
   font-size: 14px;
@@ -72,4 +77,9 @@ button {
   font-weight: bold;
   color: var(--bg-color);
   cursor: pointer;
+}
+label {
+  font-weight: bold;
+  font-size: 18px;
+  color: var(--bg-color);
 }
