--- a/style.css
+++ b/style.css
@@ -46,6 +46,13 @@ input {
 #total-salary {
   font-weight: bold;
   font-size: 16px;
+  color: #283618;
+}
+#output-item,
+#output-number {
+  color: #780000;
+  font-weight: 700;
+  font-size: 13px;
 }
 ::placeholder {
   font-size: 14px;
@@ -82,4 +89,5 @@ label {
   font-weight: bold;
   font-size: 18px;
   color: var(--bg-color);
+  display: block;
 }
